Updated font related stuff

--- a/web/assets/FontManifest.json
+++ b/web/assets/FontManifest.json
@@ -1,26 +1,1 @@
-[
-    {
-      "family": "MaterialIcons",
-      "fonts": [
-        {
-          "asset": "MaterialIcons-Extended.ttf"
-        }
-      ]
-    },
-    {
-      "family": "GoogleSans",
-      "fonts": [
-        {
-          "asset": "GoogleSans-Regular.ttf"
-        }
-      ]
-    },
-    {
-      "family": "GalleryIcons",
-      "fonts": [
-        {
-          "asset": "GalleryIcons.ttf"
-        }
-      ]
-    }
-]
+[{"fonts":[{"asset":"fonts/MaterialIcons-Regular.ttf"}],"family":"MaterialIcons"}]
