--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   audioplayers: ^6.0.0
   geocoding: ^3.0.0
   dio: ^5.4.3+1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
