--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geocoding: ^3.0.0
   dio: ^5.4.3+1
   shared_preferences: ^2.2.3
+  syncfusion_flutter_charts: ^25.2.6
 
 dev_dependencies:
   flutter_test:
