--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.4.3+1
   shared_preferences: ^2.2.3
   syncfusion_flutter_charts: ^25.2.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
